--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -39,13 +39,13 @@
     <% } else { %>
       <% booksList.forEach(book => { %>
         <div class="book" id="book-<%= book.id %>">
-          <a class="more" href="javascript:void(0)" onclick="toggleEditAndDelete(<%= book.id %>)">&#x2026;</a> <!-- Unicode character for ellipsis -->
+          <a class="more" href="javascript:void(0)" onclick="toggleEditAndDelete(<%= book.id %>)">&#x2026;</a>
           <img src="<%= book.thumb %>" alt="<%= book.title %>">
           <h2><%= book.title %></h2>
           <p>Author: <%= book.author_name %></p>
           <div class="edit-and-delete" id="edit-and-delete-<%= book.id %>" style="display: none;">
-            <button><a href="/edit?id=<%= book.id %>">Edit Book</a></button>
-            <button class="delete" onclick="deleteBook(<%= book.id %>)">Delete Book</button>
+            <button><a href="/update?id=<%= book.id %>">Edit Book</a></button>
+            <button><a href="/deletebook?id=<%= book.id %>" class="delete-book">Delete Book</a></button>
           </div>
           <h3>Reviews:</h3>
           <% if (book.reviews.length === 0) { %>
@@ -56,8 +56,8 @@
                 <li class="review">
                   <p>Details: <%= review.details %></p>
                   <p>Grade: <%= review.grade %></p>
-                  <button><a href="/editreview?id=<%= review.id %>">Edit Review</a></button>
-                  <button class="delete" onclick="deleteReview(<%= review.id %>)">Delete Review</a></button>
+                  <button><a href="/updatereview?id=<%= review.id %>">Edit Review</a></button>
+                  <button><a href="/deletereview?id=<%= review.id %>" class="delete-review">Delete Review</a></button>
                 </li>
               <% }) %>
             </ul>
@@ -90,32 +90,6 @@
       editAndDeleteDiv.style.display = 'block';
     } else {
       editAndDeleteDiv.style.display = 'none';
-    }
-  }
-
-  function deleteBook(bookId) {
-    if (confirm('Are you sure you want to delete this book?')) {
-      fetch(`/deleteBook?id=${bookId}`, { method: 'DELETE' })
-        .then(response => {
-          if (response.ok) {
-            location.reload();
-          } else {
-            alert('Failed to delete book');
-          }
-        });
-    }
-  }
-
-  function deleteReview(reviewId) {
-    if (confirm('Are you sure you want to delete this review?')) {
-      fetch(`/deleteReview?id=${reviewId}`, { method: 'DELETE' })
-        .then(response => {
-          if (response.ok) {
-            location.reload();
-          } else {
-            alert('Failed to delete review');
-          }
-        });
     }
   }
 </script>
